<resources>
    <string name="app_name">Lakhpati Didi</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mord"><b>MINISTRY OF RURAL DEVELOPMENT</b></string>
    <string name="govtindia">GOVERNMENT OF INDIA</string>
    <string name="mord_hindi"><b>ग्रामीण विकास मंत्रालय</b></string>
    <string name="govtindia_hindi">भारत सरकार</string>
    <string name="et_enter_userId">Enter user id</string>
    <string name="et_enter_password">Password</string>
    <string name="et_enter_mobile_number">Mobile Number</string>
    <string name="et_enter_new_password">New Password</string>
    <string name="et_enter_Confirm_password">Confirm New Password</string>
    <string name="et_enter_OTP">Enter OTP</string>
    <!--all button text-->
    <string name="btn_login">Login</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="btn_update_password">Update Password</string>
    <!--all textview strings starting with tv initials-->
    <string name="tv_forget_pw">Forgot Password?</string>
    <string name="tv_logout">Logout</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_language">Change language</string>
    <string name="menu_info">info</string>
    <string name="info">Info</string>
    <string name="error_code_not_found">Error code not found.</string>
    <string name="not_getting_data_from_server">Error, while getting data from server.</string>
    <string name="invalid_fields">Required Fields are invalid.</string>
    <string name="error_security_validation">Security validation failed.</string>
    <string name="error_validation">Validations are failed.</string>
    <string name="error_session_exist">Session already exists.</string>

    <string name="NO_INTERNET_TITLE">No Internet!</string>
    <string name="SERVER_ERROR_TITLE">Server Error!</string>
    <string name="INTERNET_MESSAGE">Please, open your internet connection.</string>
    <string name="server_error_dialog">Server Error!</string>
    <string name="no_internet_dialog">No Internet!</string>
    <string name="loading_heavy">Loading...</string>
    <string name="not_filled">Not Captured</string>
    //new
    strings
    7/12/2021
    <string name="invalid_userid">Invalid user id</string>
    <string name="invalid_password">Invalid password</string>
    <string name="sector">Sector</string>
    <string name="activity">Activity</string>
    <string name="frequency_range">Frequency Range</string>
    <string name="delete">Delete</string>
    <string name="range_value">10000 and 2000 Rs. Rang</string>
    //this
    string
    can
    be
    deleted
    <string name="last_entry_before_nrlm">Income status before joining NRLM</string>
    <string name="last_entry_after_nrlm">Present income status</string>
    <string name="no_field_date">Not filled/ Date</string>
    <string name="go_to_member_entry">Go To Member Entry</string>
    <string name="select_shg">Select SHG</string>
    <string name="select_member_from">Select Member from</string>
    <string name="shg_detail">SHG Detail</string>
    <string name="total_member">Total Member</string>
    <string name="go_to_shg_members">Go to SHG Members</string>
    <string name="income_before_coming_nrlm">Income (Before coming into NRLM Fold)</string>
    <string name="select_month_and_year_before_your_date_of_joining">Select Month and Year before your date of joining in NRLM.</string>
    <string name="select_month_and_year">Select Month/Year</string>
    <string name="select_sector">Select Sector</string>
    <string name="select_activity">Select Activity</string>
    <string name="income_frquency">Income Frequency</string>
    <string name="income_range">Income Range</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="submit_details">Submit Details</string>
    <string name="shg_members">SHG Members</string>
    <string name="home">Home</string>
    <string name="alert">Alert!</string>
    <string name="number_cant_be_empty">Invalid  mobile number.</string>
    <string name="tv_mpin_title">We Value Security</string>
    <string name="tv_mpin_msg">Set new MPIN to Keep your Application safe and secure</string>
    <string name="tv_mpin_confirm">Confirm Mpin</string>
    <string name="tv_mpin_set_mpin">Set Mpin </string>
    <string name="tv_mpin_user_msg">Hi, Lakhpati User</string>
    <string name="tv_mpin_userId">UserId:</string>
    <string name="btn_verify_mpin">Verify Mpin</string>
    <string name="enter_mpin_first">Enter Mpin first</string>
    <string name="enter_confirm_first">Enter confirm Mpin first</string>
    <string name="mpin_can_not_empty">Mpin can not be empty</string>
    <!--Strings added after labels sent to Atul Sir-->
    <string name="no_block_found">No assigned block found</string>
    <string name="no_gp_found">No assigned gram panchayat found</string>
    <string name="no_village_found">No assigned village found</string>
    <string name="no_shg_found">No assigned shg found</string>
    <string name="no_member_found">No assigned member found</string>
    <string name="no_clf_found">No assigned CLF found</string>
    <string name="no_vo_found">No assigned VO found</string>
    <string name="authenticating">Authenticating...</string>
    <string name="before_income_title">Fill Income (Before coming into NRLM Fold)</string>
    <string name="after_income_title">Fill Income at present</string>
    <string name="income_selection">Income Selection</string>
    <string name="login_attempt_exceded">Please wait for 15 minutes, you exceeded the login attempt limit more than 5 !!!</string>
    <string name="invalid_id_or_pass">Invalid User Id or Password</string>
    <string name="invalid_login_time">Invalid APP Login time !!!</string>
    <string name="invalid_device">Invalid device !!!</string>
    <string name="syncing_data">Syncing...</string>
    <string name="synced_msg">Data Synced Successfully!!!</string>
    <string name="yearly_income">Yearly Income : </string>
    <string name="invalid_otp_msg">Entered Otp is invalid.</string>
    <string name="oops_smthng_wrong">Update success Please Login Tomorrow </string>
    <string name="please_change_lan" translatable="false">Please Change phone language in English</string>
    <string name="add_activity_msg">Add Another Activity</string>
    <string name="total_activity">Total Activities are : </string>
    <string name="secc_not_fill">Please select SECC first</string>
    <string name="sector_not_fill">Please select sector first</string>
    <string name="activity_not_fill">Please select activity first</string>
    <string name="frequency_not_fill">Please select income frequency  first</string>
    <string name="range_not_fill">Please select income range</string>
    <string name="wrong_mpin">Entered M-PIN is wrong.</string>
    //new
    strings
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_change_the_language">Do you want to change the language?</string>
    //new
    strings
    by
    lincon
    <string name="dialog_sign_out_title">Confirm Sign Out</string>
    <string name="dialog_InActive_title" translatable="false">Confirm InActive</string>
    <string name="dialog_sign_out_msg">You are signing out of your app on this device.</string>
    <string name="dialog_btn_signout">sign out</string>
    <string name="dialog_btn_InActive" translatable="false">InActive</string>
    <string name="dialog_toast_InActive" translatable="false">Successfully InActive</string>/
    <string name="dialog_inActive" translatable="false">Are you Sure</string>
    <string name="toast_success_sign_out">Successfully SignOut</string>
    <string name="dialog_cancel_btn">cancel</string>
    <string name="entry_complete_msg">Entries completed</string>
    <string name="member_is_InActive" translatable="false">Member Is InActive Please Do Active First</string>
    <string name="select_clf">Select CLF</string>
    <string name="select_vo">Select VO</string>
    <string name="select_block">Select Block</string>
    <string name="select_grampanchayat">Select Grampanchayat:</string>
    <string name="select_village">Select Village</string>
    <string name="members_before_nrlm_entry">HHs whose survey completed (before joining NRLM)</string>
    <string name="members_complete_after_nrlm_entry">HHs whose survey completed (Present status)</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="select_entry_date">Select Entry Date</string>
    <string name="add_activity">Add activity</string>
    <string name="select_secc">Select Secc</string>
    <string name="selected_activity">Selected Activity</string>
    <string name="livlihood_income_at_present">Livelihoods and Income at present</string>
    <string name="enter_your_mpin">Enter your PIN</string>
    <string name="for_secure_access">For secure access</string>
    <string name="seed_sec">Seed SECC TIN Number by selecting the name</string>

    // newly added string
    <string name="sign_up">Sign up form ?</string>
    <string name="select_state">Select your state</string>
    <string name="selete_district">Select your district</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="enter_email">Enter email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="shg_alloted" translatable="false">SHG\'s Alloted</string>

    <string name="dialog_toast_active" translatable="false">Member activated successfully</string>
    <string name="shg_members_alotted">Shg members alotted</string>
    <string name="shg_members_survey_completed">SHG\'s Member's survey completed</string>
    <string name="shg_members_survey_pending">shg_members_survey_pending</string>
    <string name="shg_s_whose_all_members_survey_completed">shg\'s whose all members survey completed</string>
    <string name="shg_s_whose_atleast_one_member_survey_pending">shg\'s whose atleast one member survey pending</string>
    <string name="synched_to_server">Synched to server</string>
    <string name="pending_for_synchronization">Pending for synchronization</string>
    <string name="dashboard">Dashboard</string>
    <string name="member">Member </string>
    <string name="memberjoiningdate">\"Member\'s joining date : \"</string>
    <string name="fathername">Father/Husband Name :</string>
    <string name="capture">Capture</string>
    <string name="capturedfor">Captured for</string>
    <string name="captured">Captured</string>
    <string name="shg_members_s_survey_pending">SHG Members\'s survey pending</string>
    <string name="shg_member_s_survey_details_synched_to_server">shg member\'s survey details synched to server</string>


</resources>