<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/settingFragment"
        android:title="@string/menu_setting"
        android:menuCategory="secondary"
        android:visible="false"
        android:icon="@drawable/ic_baseline_settings_24"/>-->

    <item
        android:id="@+id/assignVehicleFragment"
        android:title="@string/home"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_outline_home_24"/>

   <!-- <item
        android:id="@+id/changeLanguageFragment"
        android:title="@string/menu_language"
        android:menuCategory="secondary"
        app:showAsAction="never"
        android:icon="@drawable/ic_outline_language_24"/>-->

    <item
        android:id="@+id/logoutDialog"
        android:title="@string/tv_logout"
        android:menuCategory="secondary"
        app:showAsAction="never"
        android:icon="@drawable/ic_outline_logout_24"/>


    <item
        android:title="@string/menu_info">

        <menu>
            <item
                android:title="@string/menu_notification"
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/ic_outline_label_24">

            </item>
        </menu>
    </item>



</menu>