<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerInParent="true"
                android:layout_margin="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/aajeevika_ic"/>

           <!-- <ImageView
                android:layout_margin="30dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/emblem"/>-->

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mord_hindi"
            android:textSize="16sp"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/govtindia_hindi"
            android:textSize="13sp"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mord"
            android:textSize="16sp"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/govtindia"
            android:textSize="13sp"
            android:fontFamily="@font/manrope_regular"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>