<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.SignUpFragment">


  <data>


  </data>
    <!--android:layout_above="@+id/btn_goToMember"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_marginBottom="@dimen/space_5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textColor="@color/green_500"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_marginLeft="@dimen/space_10dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/space_30dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_25dp"
                    android:layout_marginLeft="@dimen/space_3dp"
                    android:layout_marginRight="@dimen/space_3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/select_state"
                    android:padding="3dp"
                    app:boxStrokeColor="@color/out_line_strok">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_state"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="none"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_marginLeft="@dimen/space_3dp"
                    android:layout_marginRight="@dimen/space_3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/selete_district"
                    android:padding="3dp"
                    app:boxStrokeColor="@color/out_line_strok">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_district"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="none"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_marginLeft="@dimen/space_3dp"
                    android:layout_marginRight="@dimen/space_3dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/select_block"
                    android:padding="3dp"
                    app:boxStrokeColor="@color/out_line_strok">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_block"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/montserrat_regular"
                        android:inputType="none"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_user_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/out_line_strok"
                    android:fontFamily="@font/manrope_regular"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:maxLength="50"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/out_line_strok"
                    android:fontFamily="@font/manrope_regular"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_userMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:maxLength="10"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/out_line_strok"
                    android:fontFamily="@font/manrope_regular"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:maxLength="35"
                        android:fontFamily="@font/manrope_regular"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_signUp"
                    android:layout_margin="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/sign_up"
                    android:textColor="@color/green_500"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:fontFamily="@font/manrope_semi_bold" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>





</layout>