<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.ForgetPasswordFragment">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/aajeevika_ic" />
            <TextView
                android:id="@+id/tv_usermsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_extra_bold"
                android:gravity="center_horizontal"
                android:text="@string/et_enter_OTP"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <com.chaos.view.PinView
                android:id="@+id/et_otp"
                android:layout_gravity="center_horizontal"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_regular"
                app:cursorColor="@color/green_500"
                app:cursorWidth="2dp"
                app:itemCount="4"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="0dp"
                app:itemWidth="48dp"
                app:lineColor="@color/green_500"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

<!--
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_enterOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_enter_OTP"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:errorEnabled="true"
                android:fontFamily="@font/manrope_regular"
                app:boxStrokeColor="@color/out_line_strok"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enterOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="4"
                    android:fontFamily="@font/manrope_regular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/llfurther_view"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_useId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_enter_userId"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                app:errorEnabled="true"
                app:boxStrokeColor="@color/out_line_strok"
                android:fontFamily="@font/manrope_regular"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="15"
                    android:fontFamily="@font/manrope_regular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

<!--
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_enter_mobile_number"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/out_line_strok"
                android:fontFamily="@font/manrope_regular"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="10"
                    android:fontFamily="@font/manrope_regular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_enter_new_password"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:fontFamily="@font/manrope_regular"
                app:boxStrokeColor="@color/out_line_strok"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="15"
                    android:fontFamily="@font/manrope_regular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ttl_confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_enter_Confirm_password"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:fontFamily="@font/manrope_regular"
                app:boxStrokeColor="@color/out_line_strok"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLength="15"
                    android:fontFamily="@font/manrope_regular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_updatePw"
                style="@style/IconTextContainedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/manrope_semi_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btn_update_password"
                android:textSize="16sp"
                android:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyOtpbtn"
                style="@style/IconTextContainedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/manrope_semi_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/verify_otp"
                android:textSize="16sp" />


        </RelativeLayout>


    </RelativeLayout>
</layout>